supp warn